Roda modelos para obter resultados oficiais. Muda funções-alvo para erro absoluto.

--- a/tuning.ipynb
+++ b/tuning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,29 +31,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Variáveis globais\n",
-    "FORECASTING_HORIZON = 2 # Deve ser a única coisa a mudar entre todos os arquivos h{i}.ipynb\n",
+    "FORECASTING_HORIZON = 1 # Deve ser a única coisa a mudar entre todos os arquivos h{i}.ipynb\n",
     "TEST_SIZE = 79\n",
-    "WINDOW_LENGTH = 13\n",
+    "WINDOW_LENGTH = 12\n",
     "LINEAR_MODELS = ['ridge', 'lasso'] # Modelos cujos dados precisam ser normalizados\n",
     "N_JOBS = 4\n",
     "# Estimador sendo ajustado\n",
-    "CURRENT_ESTIMATOR = 'lasso'\n",
+    "CURRENT_ESTIMATOR = 'lgbm'\n",
     "# Parâmetros específicos de modelos\n",
     "# LASSO\n",
-    "LASSO_MAX_ITER = 2000\n",
     "LASSO_CONFIG = {\n",
     "    'max_iter': 2000,\n",
     "    'n_jobs': N_JOBS\n",
     "}\n",
     "# Random Forest\n",
-    "RF_MAX_FEATURES = 1.0\n",
-    "N_TREES = 1000\n",
-    "RF_CRITERION = \"squared_error\"\n",
+    "RF_CONFIG = {\n",
+    "    'n_estimators': 1000,\n",
+    "    'criterion': 'absolute_error',\n",
+    "    'max_features': 1.0\n",
+    "}\n",
     "# LGBM\n",
     "LGBM_CONFIG = {\n",
     "    'n_jobs': N_JOBS,\n",
@@ -61,12 +62,13 @@
     "    'force_col_wise': True,\n",
     "    'n_estimators': 1000,\n",
     "    'learning_rate': 0.01,\n",
+    "    'objective': 'regression_l1'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -109,49 +111,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2018-02</th>\n",
-       "      <td>0.711133</td>\n",
-       "      <td>0.501378</td>\n",
-       "      <td>0.34880</td>\n",
-       "      <td>0.485688</td>\n",
-       "      <td>0.428037</td>\n",
-       "      <td>0.32</td>\n",
+       "      <th>2017-03</th>\n",
+       "      <td>0.658977</td>\n",
+       "      <td>0.404575</td>\n",
+       "      <td>0.34446</td>\n",
+       "      <td>0.455176</td>\n",
+       "      <td>0.282510</td>\n",
+       "      <td>0.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-03</th>\n",
-       "      <td>0.556082</td>\n",
-       "      <td>0.523392</td>\n",
-       "      <td>0.38276</td>\n",
-       "      <td>0.477211</td>\n",
-       "      <td>0.440431</td>\n",
-       "      <td>0.09</td>\n",
+       "      <th>2017-04</th>\n",
+       "      <td>0.660869</td>\n",
+       "      <td>0.408645</td>\n",
+       "      <td>0.39880</td>\n",
+       "      <td>0.406985</td>\n",
+       "      <td>0.401124</td>\n",
+       "      <td>0.14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-04</th>\n",
-       "      <td>0.207642</td>\n",
-       "      <td>0.269854</td>\n",
-       "      <td>0.20582</td>\n",
-       "      <td>0.191435</td>\n",
-       "      <td>0.388911</td>\n",
-       "      <td>0.22</td>\n",
+       "      <th>2017-05</th>\n",
+       "      <td>0.145340</td>\n",
+       "      <td>0.108103</td>\n",
+       "      <td>0.21552</td>\n",
+       "      <td>0.140452</td>\n",
+       "      <td>0.309435</td>\n",
+       "      <td>0.31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-05</th>\n",
-       "      <td>-0.168238</td>\n",
-       "      <td>0.222377</td>\n",
-       "      <td>0.19698</td>\n",
-       "      <td>0.111983</td>\n",
-       "      <td>0.422620</td>\n",
-       "      <td>0.40</td>\n",
+       "      <th>2017-06</th>\n",
+       "      <td>-0.064340</td>\n",
+       "      <td>0.207424</td>\n",
+       "      <td>0.19631</td>\n",
+       "      <td>0.164237</td>\n",
+       "      <td>0.281415</td>\n",
+       "      <td>-0.23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-06</th>\n",
-       "      <td>-0.126009</td>\n",
-       "      <td>0.219213</td>\n",
-       "      <td>0.20791</td>\n",
-       "      <td>0.177197</td>\n",
-       "      <td>0.298915</td>\n",
-       "      <td>1.26</td>\n",
+       "      <th>2017-07</th>\n",
+       "      <td>-0.154144</td>\n",
+       "      <td>0.044817</td>\n",
+       "      <td>0.22824</td>\n",
+       "      <td>0.169523</td>\n",
+       "      <td>0.056204</td>\n",
+       "      <td>0.24</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -160,14 +162,14 @@
       "text/plain": [
        "            ridge     lasso  random_forest      lgbm     arima  y_true\n",
        "month                                                                 \n",
-       "2018-02  0.711133  0.501378        0.34880  0.485688  0.428037    0.32\n",
-       "2018-03  0.556082  0.523392        0.38276  0.477211  0.440431    0.09\n",
-       "2018-04  0.207642  0.269854        0.20582  0.191435  0.388911    0.22\n",
-       "2018-05 -0.168238  0.222377        0.19698  0.111983  0.422620    0.40\n",
-       "2018-06 -0.126009  0.219213        0.20791  0.177197  0.298915    1.26"
+       "2017-03  0.658977  0.404575        0.34446  0.455176  0.282510    0.25\n",
+       "2017-04  0.660869  0.408645        0.39880  0.406985  0.401124    0.14\n",
+       "2017-05  0.145340  0.108103        0.21552  0.140452  0.309435    0.31\n",
+       "2017-06 -0.064340  0.207424        0.19631  0.164237  0.281415   -0.23\n",
+       "2017-07 -0.154144  0.044817        0.22824  0.169523  0.056204    0.24"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +419,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,36 +432,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\asfra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:628: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 7.999e-03, tolerance: 7.656e-03\n",
-      "  model = cd_fast.enet_coordinate_descent(\n",
-      "C:\\Users\\asfra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:628: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 1.245e-02, tolerance: 1.169e-02\n",
-      "  model = cd_fast.enet_coordinate_descent(\n",
-      "C:\\Users\\asfra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:628: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 1.253e-02, tolerance: 1.169e-02\n",
-      "  model = cd_fast.enet_coordinate_descent(\n",
-      "C:\\Users\\asfra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:628: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 1.079e-02, tolerance: 1.018e-02\n",
-      "  model = cd_fast.enet_coordinate_descent(\n",
-      "C:\\Users\\asfra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:628: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 1.451e-02, tolerance: 1.296e-02\n",
-      "  model = cd_fast.enet_coordinate_descent(\n",
-      "C:\\Users\\asfra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:628: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 1.429e-02, tolerance: 1.296e-02\n",
-      "  model = cd_fast.enet_coordinate_descent(\n",
-      "C:\\Users\\asfra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:628: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 1.432e-02, tolerance: 1.312e-02\n",
-      "  model = cd_fast.enet_coordinate_descent(\n",
-      "C:\\Users\\asfra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:628: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 1.725e-02, tolerance: 1.312e-02\n",
-      "  model = cd_fast.enet_coordinate_descent(\n",
-      "C:\\Users\\asfra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:628: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 1.977e-02, tolerance: 1.312e-02\n",
-      "  model = cd_fast.enet_coordinate_descent(\n",
-      "C:\\Users\\asfra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:628: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 1.447e-02, tolerance: 1.420e-02\n",
-      "  model = cd_fast.enet_coordinate_descent(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Roda o LASSO\n",
     "if CURRENT_ESTIMATOR == 'lasso':\n",
@@ -476,25 +451,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Roda o Random Forest\n",
     "if CURRENT_ESTIMATOR == 'random_forest':\n",
-    "    rf = RandomForestRegressor(\n",
-    "        max_features=RF_MAX_FEATURES,\n",
-    "        n_jobs=N_JOBS,\n",
-    "        n_estimators=N_TREES,\n",
-    "        criterion=RF_CRITERION\n",
-    "    )\n",
+    "    rf = RandomForestRegressor(**RF_CONFIG)\n",
     "    forecaster = make_reduction(rf, window_length=WINDOW_LENGTH)\n",
     "    y_train, y_test, y_pred = utils.evaluate_pipeline(forecaster, df, steps_ahead=FORECASTING_HORIZON)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,90 +472,27 @@
     "if CURRENT_ESTIMATOR == 'lgbm':\n",
     "    lgbm = LGBMRegressor(**LGBM_CONFIG)\n",
     "    forecaster = make_reduction(lgbm, window_length=WINDOW_LENGTH)\n",
-    "    y_train, y_test, y_pred = utils.evaluate_pipeline(forecaster, df, steps_ahead=FORECASTING_HORIZON)"
+    "    #y_train, y_test, y_pred = utils.evaluate_pipeline(forecaster, df, steps_ahead=FORECASTING_HORIZON)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\asfra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sktime\\performance_metrics\\forecasting\\_classes.py:467: UserWarning: y_pred and y_true do not have the same column index. This may indicate incorrect objects passed to the metric. Indices of y_true will be used for y_pred.\n",
-      "  warn(\n",
-      "C:\\Users\\asfra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sktime\\performance_metrics\\forecasting\\_classes.py:467: UserWarning: y_pred and y_true do not have the same column index. This may indicate incorrect objects passed to the metric. Indices of y_true will be used for y_pred.\n",
-      "  warn(\n",
-      "C:\\Users\\asfra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sktime\\performance_metrics\\forecasting\\_classes.py:467: UserWarning: y_pred and y_true do not have the same column index. This may indicate incorrect objects passed to the metric. Indices of y_true will be used for y_pred.\n",
-      "  warn(\n"
-     ]
-    },
-    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>new_lasso</th>\n",
-       "      <th>old_lasso</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>MAE</th>\n",
-       "      <td>0.347551</td>\n",
-       "      <td>0.347441</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MSE</th>\n",
-       "      <td>0.199175</td>\n",
-       "      <td>0.200124</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MAPE</th>\n",
-       "      <td>1.481002</td>\n",
-       "      <td>1.473030</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DM</th>\n",
-       "      <td>0.129911</td>\n",
-       "      <td>0.135638</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      new_lasso  old_lasso\n",
-       "MAE    0.347551   0.347441\n",
-       "MSE    0.199175   0.200124\n",
-       "MAPE   1.481002   1.473030\n",
-       "DM     0.129911   0.135638"
+       "\"\\n# Calcula métricas de erro\\n# Evita avisos chatos\\nog_preds['y_true'].name = y_pred.name\\n# Resultados\\nmae = MeanAbsoluteError()\\nmse = MeanSquaredError()\\nmape = MeanAbsolutePercentageError()\\nlabels = ['MAE', 'MSE', 'MAPE', 'DM']\\nres = {\\n    f'new_{CURRENT_ESTIMATOR}': [\\n        mae(og_preds['y_true'], y_pred),\\n        mse(og_preds['y_true'], y_pred),\\n        mape(og_preds['y_true'], y_pred),\\n        epf.DM(og_preds['y_true'], og_preds['arima'], y_pred)\\n    ],\\n    f'old_{CURRENT_ESTIMATOR}': [\\n        mae(og_preds['y_true'], og_preds[CURRENT_ESTIMATOR]),\\n        mse(og_preds['y_true'], og_preds[CURRENT_ESTIMATOR]),\\n        mape(og_preds['y_true'], og_preds[CURRENT_ESTIMATOR]),\\n        epf.DM(og_preds['y_true'], og_preds['arima'], og_preds[CURRENT_ESTIMATOR])\\n    ]\\n}\\nres_df = pd.DataFrame(res, index=labels)\\nres_df\\n\""
       ]
      },
-     "execution_count": 193,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"\n",
     "# Calcula métricas de erro\n",
     "# Evita avisos chatos\n",
     "og_preds['y_true'].name = y_pred.name\n",
@@ -609,7 +516,44 @@
     "    ]\n",
     "}\n",
     "res_df = pd.DataFrame(res, index=labels)\n",
-    "res_df"
+    "res_df\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = df['ipca']\n",
+    "X = df.drop(columns=['ipca'])\n",
+    "y_train, y_test, X_train, X_test = temporal_train_test_split(y, X, test_size=TEST_SIZE)\n",
+    "fh = ForecastingHorizon(FORECASTING_HORIZON, is_relative=True)\n",
+    "cv = ExpandingWindowSplitter(fh, initial_window=y_train.size)\n",
+    "forecaster.fit(y_train, X_train, fh=fh)\n",
+    "y_pred = forecaster.predict(fh=fh, X=X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2017-03    0.410934\n",
+       "Freq: M, Name: ipca, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
    ]
   }
  ],
