Recupera função 'get_feat_df'. Agradecimentos ao Rosa.

--- a/var_importance.ipynb
+++ b/var_importance.ipynb
@@ -454,12 +454,16 @@
     {
      "data": {
       "text/html": [
-       "<style>#sk-3f2d49d8-942d-4d75-823b-fba537acb63f {color: black;background-color: white;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f pre{padding: 0;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-toggleable {background-color: white;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-estimator:hover {background-color: #d4ebff;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 2em;bottom: 0;left: 50%;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-item {z-index: 1;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-parallel::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 2em;bottom: 0;left: 50%;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-parallel-item {display: flex;flex-direction: column;position: relative;background-color: white;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-parallel-item:only-child::after {width: 0;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;position: relative;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-label label {font-family: monospace;font-weight: bold;background-color: white;display: inline-block;line-height: 1.2em;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-label-container {position: relative;z-index: 2;text-align: center;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-3f2d49d8-942d-4d75-823b-fba537acb63f div.sk-text-repr-fallback {display: none;}</style><div id='sk-3f2d49d8-942d-4d75-823b-fba537acb63f' class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RecursiveTabularRegressionForecaster(estimator=LGBMRegressor(force_col_wise=True, n_jobs=4, verbose=-1),\n",
-       "                                     window_length=12)</pre><b>Please rerun this cell to show the HTML repr or trust the notebook.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class='sk-label-container'><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=UUID('8d64c27e-eddb-42a7-92bd-d7c67d2d255b') type=\"checkbox\" ><label for=UUID('8d64c27e-eddb-42a7-92bd-d7c67d2d255b') class='sk-toggleable__label sk-toggleable__label-arrow'>RecursiveTabularRegressionForecaster</label><div class=\"sk-toggleable__content\"><pre>RecursiveTabularRegressionForecaster(estimator=LGBMRegressor(force_col_wise=True, n_jobs=4, verbose=-1),\n",
-       "                                     window_length=12)</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-serial\"><div class='sk-item'><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=UUID('db4683b4-111c-42ae-b166-cd4ccd7d4057') type=\"checkbox\" ><label for=UUID('db4683b4-111c-42ae-b166-cd4ccd7d4057') class='sk-toggleable__label sk-toggleable__label-arrow'>LGBMRegressor</label><div class=\"sk-toggleable__content\"><pre>LGBMRegressor(force_col_wise=True, n_jobs=4, verbose=-1)</pre></div></div></div></div></div></div></div></div></div></div>"
+       "<style>#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb {color: black;background-color: white;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb pre{padding: 0;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-toggleable {background-color: white;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-estimator:hover {background-color: #d4ebff;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 2em;bottom: 0;left: 50%;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-item {z-index: 1;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-parallel::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 2em;bottom: 0;left: 50%;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-parallel-item {display: flex;flex-direction: column;position: relative;background-color: white;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-parallel-item:only-child::after {width: 0;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;position: relative;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-label label {font-family: monospace;font-weight: bold;background-color: white;display: inline-block;line-height: 1.2em;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-label-container {position: relative;z-index: 2;text-align: center;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-00363e56-f073-4b6c-9166-8b1718c3f2bb div.sk-text-repr-fallback {display: none;}</style><div id='sk-00363e56-f073-4b6c-9166-8b1718c3f2bb' class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RecursiveTabularRegressionForecaster(estimator=LGBMRegressor(force_col_wise=True, learning_rate=0.01, n_estimators=1000,\n",
+       "              n_jobs=4, objective=&#x27;regression_l1&#x27;, verbose=-1),\n",
+       "                                     window_length=12)</pre><b>Please rerun this cell to show the HTML repr or trust the notebook.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class='sk-label-container'><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=UUID('848fa626-489d-4eb1-bd8e-bb114e495052') type=\"checkbox\" ><label for=UUID('848fa626-489d-4eb1-bd8e-bb114e495052') class='sk-toggleable__label sk-toggleable__label-arrow'>RecursiveTabularRegressionForecaster</label><div class=\"sk-toggleable__content\"><pre>RecursiveTabularRegressionForecaster(estimator=LGBMRegressor(force_col_wise=True, learning_rate=0.01, n_estimators=1000,\n",
+       "              n_jobs=4, objective=&#x27;regression_l1&#x27;, verbose=-1),\n",
+       "                                     window_length=12)</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-serial\"><div class='sk-item'><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=UUID('cf870bac-56ee-47a3-9604-0bae39b02958') type=\"checkbox\" ><label for=UUID('cf870bac-56ee-47a3-9604-0bae39b02958') class='sk-toggleable__label sk-toggleable__label-arrow'>LGBMRegressor</label><div class=\"sk-toggleable__content\"><pre>LGBMRegressor(force_col_wise=True, learning_rate=0.01, n_estimators=1000,\n",
+       "              n_jobs=4, objective=&#x27;regression_l1&#x27;, verbose=-1)</pre></div></div></div></div></div></div></div></div></div></div>"
       ],
       "text/plain": [
-       "RecursiveTabularRegressionForecaster(estimator=LGBMRegressor(force_col_wise=True, n_jobs=4, verbose=-1),\n",
+       "RecursiveTabularRegressionForecaster(estimator=LGBMRegressor(force_col_wise=True, learning_rate=0.01, n_estimators=1000,\n",
+       "              n_jobs=4, objective='regression_l1', verbose=-1),\n",
        "                                     window_length=12)"
       ]
      },
@@ -514,7 +518,7 @@
     {
      "data": {
       "text/plain": [
-       "2017-03    0.449799\n",
+       "2017-03    0.410934\n",
        "Freq: M, Name: ipca, dtype: float64"
       ]
      },
@@ -559,17 +563,17 @@
     {
      "data": {
       "text/plain": [
-       "2017-03    0.449799\n",
-       "2017-04    0.445899\n",
-       "2017-05    0.195858\n",
-       "2017-06    0.164196\n",
-       "2017-07    0.188674\n",
+       "2017-03    0.410934\n",
+       "2017-04    0.385672\n",
+       "2017-05    0.229672\n",
+       "2017-06    0.281583\n",
+       "2017-07    0.248951\n",
        "             ...   \n",
-       "2023-05    0.554175\n",
-       "2023-06    0.237328\n",
-       "2023-07    0.072753\n",
-       "2023-08    0.159497\n",
-       "2023-09    0.176189\n",
+       "2023-05    0.580824\n",
+       "2023-06    0.222725\n",
+       "2023-07    0.236006\n",
+       "2023-08    0.279189\n",
+       "2023-09    0.308506\n",
        "Freq: M, Name: ipca, Length: 79, dtype: float64"
       ]
      },
@@ -585,10 +589,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define a função que retorna DF com importâncias de variáveis\n",
+    "def get_feat_df(\n",
+    "    cryptic_var_names: list[str],\n",
+    "    df_var_names: list[str],\n",
+    "    cryptic_feat_importances: list[float],\n",
+    ") -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Extrai importâncias dos do modelo e converte para 'DataFrame' legível.\n",
+    "    Testado apenas para o LGBM.\n",
+    "    Criado para ser usado com o LGBM e o Random Forest.\n",
+    "    Essa função ficou uma bagunça. Já estou no final do TCC e não me importo tanto com beleza.\n",
+    "    Daria para remover todas as subfunções.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "\n",
+    "    cryptic_var_names: list[str]\n",
+    "        Lista do nome de variáveis retornada pela API do sklearn.\n",
+    "        Obtido do LGBM com o método `forecaster.estimator_.booster_.feature_name()`.\n",
+    "\n",
+    "    df_var_names: list[str]\n",
+    "        Lista de variáveis no 'DataFrame' usado para as previsões.\n",
+    "        Retornado por `df.columns`.\n",
+    "\n",
+    "    cryptic_feat_importances; list[float]\n",
+    "        Lista de importâncias numéricas.\n",
+    "        Retornado no LGBM por `forecaster.estimator_.booster_.feature_importance(importance_type='gain')`.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "\n",
+    "    pd.DataFrame:\n",
+    "        'DataFrame' com índices representando cada variável e valor representando a %\n",
+    "        de ganho que se deve àquela variável.\n",
+    "    \"\"\"\n",
+    "    def extract_feature_names(cryptic_var_names, df_var_names) -> list[str]:\n",
+    "        translated_feature_names = []\n",
+    "        for name in cryptic_var_names:\n",
+    "            _, n = name.split('_')\n",
+    "            n = int(n)\n",
+    "            translated_feature_names.append(f\"{df_var_names[n % 41]}_{int(n / 41)}\")\n",
+    "        return translated_feature_names\n",
+    "    \n",
+    "    def get_feature_importance_dict(cryptic_feat_importances, feat_names):\n",
+    "        return {name: importance for name, importance in zip(feat_names, cryptic_feat_importances)}\n",
+    "    \n",
+    "    def condense_feat_importances(var_names: list[str], feat_importances: dict[str, float]) -> pd.DataFrame:\n",
+    "        # Cria dicionário com valor absoluto de importâncias para cada variável\n",
+    "        # independente de lags\n",
+    "        added_importances = {}\n",
+    "        for feat in var_names:\n",
+    "            added_importances[feat] = 0\n",
+    "            for k, v in feat_importances.items():\n",
+    "                if feat in k:\n",
+    "                    added_importances[feat] += v\n",
+    "        total = 0\n",
+    "        for k, v in added_importances.items():\n",
+    "            total += v\n",
+    "\n",
+    "        # Converte para dicionário de porcentagens\n",
+    "        final_importances = {k: v / total for k, v in added_importances.items()}\n",
+    "        final_importances = pd.DataFrame.from_dict(final_importances, orient='index')\n",
+    "        final_importances.columns = ['values']\n",
+    "        final_importances = final_importances.sort_values(by='values', ascending=False)\n",
+    "        return final_importances\n",
+    "    \n",
+    "    translated_feat_names = extract_feature_names(cryptic_var_names, df_var_names)\n",
+    "    translated_feat_importances = get_feature_importance_dict(\n",
+    "    cryptic_feat_importances,\n",
+    "    translated_feat_names\n",
+    "    )\n",
+    "    return condense_feat_importances(\n",
+    "        df_var_names,\n",
+    "        translated_feat_importances\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\asfra\\AppData\\Local\\Temp\\ipykernel_6932\\2440423667.py:1: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  y[[-1]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "month\n",
+       "2023-09    0.26\n",
+       "Freq: M, Name: ipca, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y[[-1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "month\n",
+       "2017-03    0.410934\n",
+       "2017-04    0.385672\n",
+       "2017-05    0.229672\n",
+       "2017-06    0.281583\n",
+       "2017-07    0.248951\n",
+       "Freq: M, Name: lgbm, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "og_preds['lgbm'].head()"
+   ]
   }
  ],
  "metadata": {
